SM-5608: Fix xalan 2.7.3 bundle dependency